More spawn configuration and icon