@@ -1,8 +1,18 @@
+![Icon](Icon.png)
 # Create: Murder and Machines
 ## A Creative Lifesteal Experience
 ## About
 Create: Murder and Machines combines the classic Tater Certified Lifesteal mod with the Create Mod and Create Aeronautics, allowing for mass production of weaponry and creation of huge warships! Take to the skies, oceans, and roads with custom-built tanks, bomber planes, and warships. 
+
+## Memory/Java requirements
+I recommend allocating at least 6GiB (6144 MiB) to the client and using the following JVM arguments **with Java 25**: `-XX:+UnlockDiagnosticVMOptions -XX:+UseShenandoahGC -XX:ShenandoahGCMode=generational -XX:ShenandoahGCHeuristics=adaptive -XX:+UseStringDeduplication -XX:+AlwaysPreTouch -XX:+UseCompactObjectHeaders`.
+For the server, the same JVM arguments with Java 25 is recommended, however the more RAM you can allocate to the server, the better. I recommend running the server on a machine running Linux. If you use a hosting provider, they almost certainly are running Linux.
+
 **Note:** This modpack requires the following curseforge mods. Due to licensing restrictions, I cannot include these in the modpack:
 - https://www.curseforge.com/minecraft/mc-mods/ftb-chunks-forge
 - https://www.curseforge.com/minecraft/mc-mods/ftb-teams-forge
 - https://www.curseforge.com/minecraft/mc-mods/ftb-library-forge
+
+If installing FTB, I recommend also installing these mods: 
+- https://modrinth.com/mod/ftbchunksaerospace
+- https://modrinth.com/mod/create-big-cannons-ftb-claims-protection
